fix(player): hide scrubber handle on mobile

--- a/public/src/scss/layout/_player.scss
+++ b/public/src/scss/layout/_player.scss
@@ -44,13 +44,15 @@ body {
                 height: 3px;
             }
 
-            &:before {
-                content: '';
-                position: absolute;
-                top: -10px;
-                left: 0;
-                right: 0;
-                bottom: -10px;
+            @include media(tablet) {
+                &:before {
+                    content: '';
+                    position: absolute;
+                    top: -10px;
+                    left: 0;
+                    right: 0;
+                    bottom: -10px;
+                }
             }
 
             &:focus {
@@ -78,6 +80,11 @@ body {
                 cursor: pointer;
                 position: relative;
                 z-index: 3;
+                opacity: 0;
+
+                @include media(tablet) {
+                    opacity: 1;
+                }
 
                 .touchevents & {
                     width: 20px;
@@ -270,6 +277,21 @@ body {
             position: relative;
             width: 260px;
             margin: 10px auto 30px;
+
+            .player-scrubber-pane {
+                &:before {
+                    content: '';
+                    position: absolute;
+                    top: -10px;
+                    left: 0;
+                    right: 0;
+                    bottom: -10px;
+                }
+
+                &::-webkit-slider-thumb {
+                    opacity: 1;
+                }
+            }
         }
     }
 
